avatar spacing corrected on large card

--- a/app/assets/stylesheets/components/_custom_card.scss
+++ b/app/assets/stylesheets/components/_custom_card.scss
@@ -34,7 +34,3 @@
   width: 3rem;
   height: 3rem;
 }
-
-.avatar-image {
-  width: 32px;
-}
